# fast-transfer

./: README.md  app.py  pyproject.toml
src/fast_transfer/: app.py
src/fast_transfer/templates/: index.html
templates/: index.html
