[project]
name = "fast-transfer"
authors = [
  { name="ChanMo", email="chan.mo@outlook.com" },
]
keywords = ["http.server", "transfer", "share", "fast-transfer"]
description = "An easy and fast way to transfer files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "click",
  "flask"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/ChanMo/fast-transfer"
"Bug Tracker" = "https://github.com/ChanMo/fast-transfer/issues"

[project.scripts]
fast-transfer = "fast_transfer.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/fast_transfer/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
  "static",
  "templates",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fast_transfer"]